Fix: Background animation z-index
Move background animations to the background.

--- a/src/index.css
+++ b/src/index.css
@@ -106,7 +106,7 @@
     width: 100%;
     height: 100%;
     pointer-events: none;
-    z-index: -5;
+    z-index: -11;
   }
 
   .star {
